force-app/main/default/objects/encompass_By_EM__Data_Model__c/encompass_By_EM__Data_Model__c.object-meta.xml
<CustomObject>
    <label>Data Model</label>
    <nameField>
        <label>Data Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>