force-app/main/default/objects/encompass_By_EM__Data_Model__c/fields/encompass_By_EM__Encompass_LO_User_Field__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Encompass_LO_User_Field__c</fullName>
    <label>Encompass LO User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>