force-app/main/default/objects/encompass_By_EM__Data_Model__c/fields/encompass_By_EM__Mappings__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Mappings__c</fullName>
    <label>Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>