force-app/main/default/objects/encompass_By_EM__Data_Model__c/listViews/encompass_By_EM__All.listView-meta.xml
<ListView>
    <fullName>encompass_By_EM__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>